--- a/src/app/pages/tutorial/tutorial.html
+++ b/src/app/pages/tutorial/tutorial.html
@@ -12,26 +12,28 @@
       <img src="assets/img/ica-slidebox-img-1.png" class="slide-image" />
       <h2 class="slide-title">
         Welcome to
-        <b>ICA</b>
+        <b>SSS-Trust</b> APP
       </h2>
       <p>
-        The <b>ionic conference app</b> is a practical preview of the ionic framework in action, and a demonstration of proper code use.
+        Sri Subramanyeswara Swamy Trust is a charitable Organization based in Mangalagiri.
+        A unique highlight of the app is the Nowuluru Naagendra Swami Vaari Putta Temple History Page, where users can explore the rich history, traditions, and significance of this revered temple. Additionally, the app includes a dedicated section for Events conducted by SSS-Trust, such as medical camps, where users can get detailed information about past and upcoming events aimed at serving the community.
       </p>
     </section>
 
     <section class="slide">
       <img src="assets/img/ica-slidebox-img-2.png" class="slide-image" />
-      <h2 class="slide-title">What is Ionic?</h2>
+      <h2 class="slide-title">What is SSS-Trust App?</h2>
       <p>
-        <b>Ionic Framework</b> is an open source SDK that enables developers to build high quality mobile apps with web technologies like HTML, CSS, and JavaScript.
+        The <b>SSS-Trust</b>
+        Charitable Organization Mobile App is a comprehensive platform designed to connect users with the noble initiatives undertaken by SSS-Trust. The app features an About Page that provides insights into the trust's mission, vision, and the charitable work it has been involved in over the years. The Service Page showcases the various services and programs offered by the trust, focusing on community welfare, healthcare, and education.
       </p>
     </section>
 
     <section class="slide">
       <img src="assets/img/ica-slidebox-img-3.png" class="slide-image" />
-      <h2 class="slide-title">What is Ionic Appflow?</h2>
+      <h2 class="slide-title">What is Appflow?</h2>
       <p>
-        <b>Ionic Appflow</b> is a powerful set of services and features built on top of Ionic Framework that brings a totally new level of app development agility to mobile dev teams.
+        The SSS-Trust app connects users with the trust's mission and activities. It features an About Page detailing the trust’s purpose, a Service Page outlining various community programs, and a Temple History Page dedicated to the Nowuluru Naagendra Swami Vaari Putta Temple. Additionally, the app includes an Events Page for updates on medical camps and other trust-led initiatives.
       </p>
     </section>
 
