--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -1,75 +1,25 @@
 <ion-content>
   <ion-header class="ion-no-border">
-    <ion-toolbar>
+    <ion-toolbar color="light">
       <ion-buttons slot="start">
         <ion-menu-button></ion-menu-button>
-      </ion-buttons>
-      <ion-buttons slot="end">
-        <ion-button (click)="presentPopover($event)">
-          <ion-icon slot="icon-only" ios="ellipsis-horizontal" md="ellipsis-vertical"></ion-icon>
-        </ion-button>
       </ion-buttons>
     </ion-toolbar>
   </ion-header>
 
-  <div class="about-header">
+  <div class="about-header" (click)="nextImage()">
     <!-- Instead of loading an image each time the select changes, use opacity to transition them -->
-    <div class="about-image madison" [ngStyle]="location === 'madison' && {'opacity': '1'}"></div>
-    <div class="about-image austin" [ngStyle]="location === 'austin' && {'opacity': '1'}"></div>
-    <div class="about-image chicago" [ngStyle]="location === 'chicago' && {'opacity': '1'}"></div>
-    <div class="about-image seattle" [ngStyle]="location === 'seattle' && {'opacity': '1'}"></div>
+    <div *ngIf="currrentImage === 0" class="about-image madison"></div>
+    <div *ngIf="currrentImage === 1" class="about-image austin"></div>
+    <div *ngIf="currrentImage === 2" class="about-image chicago"></div>
+    <div *ngIf="currrentImage === 3" class="about-image seattle"></div>
   </div>
 
   <div class="about-info">
-    <h3 class="ion-padding-top ion-padding-start">About</h3>
-
-    <p class="ion-padding-start ion-padding-end">
-      The Ionic Conference is a one-day conference on {{ conferenceDate | date: 'mediumDate' }} featuring talks from the Ionic team. It is focused on Ionic applications being built with Ionic Framework. This includes migrating apps to the latest version of the framework, Angular concepts, Webpack, Sass, and many other technologies used in Ionic 2. Tickets are completely sold out, and we’re expecting more than 1000 developers – making this the largest Ionic conference ever!
-    </p>
-
-    <h3 class="ion-padding-top ion-padding-start">Details</h3>
-
-    <ion-list lines="none">
-      <ion-item>
-        <ion-select label="Location" [(ngModel)]="location" [interfaceOptions]="selectOptions">
-          <ion-select-option value="madison">Madison, WI</ion-select-option>
-          <ion-select-option value="austin">Austin, TX</ion-select-option>
-          <ion-select-option value="chicago">Chicago, IL</ion-select-option>
-          <ion-select-option value="seattle">Seattle, WA</ion-select-option>
-        </ion-select>
-      </ion-item>
-      <ion-item button="true" id="open-date-input">
-        <ion-label>
-          Date
-        </ion-label>
-        <ion-text slot="end">{{ conferenceDate | date: 'mediumDate' }}</ion-text>
-        <ion-popover id="date-input-popover" trigger="open-date-input" [showBackdrop]="false" side="top" alignment="end">
-          <ng-template>
-            <ion-datetime max="2056" [(ngModel)]="conferenceDate" presentation="date"></ion-datetime>
-          </ng-template>
-        </ion-popover>
-      </ion-item>
-    </ion-list>
-
-    <h3 class="ion-padding-top ion-padding-start">Internet</h3>
-
-    <ion-list lines="none">
-      <ion-item>
-        <ion-label>
-          Wifi network
-        </ion-label>
-        <ion-label class="ion-text-end">
-          ica{{conferenceDate | date: 'y'}}
-        </ion-label>
-      </ion-item>
-      <ion-item>
-        <ion-label>
-          Password
-        </ion-label>
-        <ion-label class="ion-text-end">
-          makegoodthings
-        </ion-label>
-      </ion-item>
-    </ion-list>
+    <h5 class="ion-padding-top ion-padding-start">ఈ ఆలయం హిందూ, ముస్లింల సఖ్యతకు గుర్తు.. నాగేంద్రుడిగా హిందువులు, నాగుల్ మీరాగా ముస్లింలు పూజలు.. ఎక్కడంటే.. మంగళగిరిలోని మామిడి తోట మధ్య ఉన్న శ్రీ నాగేంద్రస్వామి పుట్టాను ఇరు మతాల భక్తులు సందర్శిస్తారు.</h5>
+    <p class="ion-padding-start ion-padding-end">భారత దేశం లౌకిక దేశం.. ఇక్కడ పరమత సహనం గురించి ఎంత చెప్పినా తక్కువే.. అన్ని మతాల సారం మానవత్వం అంటూ సుఖ సంతోషాలతో జీవితాన్ని గడుపుతున్నారు. హిందువుల పండగలకు ముస్లింలు, ముస్లింల పర్వదినాలు హిందువులు శుభాకాంక్షలు చెప్పుకుంటారు. అత్యంత సన్నిహితులైతే.. ఒకరింటికి ఒకరు వెళ్లి సరదాగా గడుపుతారు. అయితే హిందువుల దేవాలయాలకు.. ముస్లింలు వెళ్లి పూజించేది అరుదుగా.. అయితే ఆంధ్రప్రదేశ్ లోని ఓ దేవాలయం హిందూ, ముస్లింల సఖ్యతకు సజీవ సాక్ష్యంగా నిలుస్తోంది. ఆ ఆలయంలో నాగేంద్రస్వామిని హిందువులు, నాగుల్ మీరా పేరుతొ ముస్లింలు అత్యంత భక్తిశ్రద్దలతో పూజిస్తుంటారు. హిందూ ముస్లిం ఐక్యతకు అద్దం పడుతున్న ఈ ప్రసిద్ధ దేవాలయం గుంటూరు జిల్లా మంగళగిరి మండలం నవులూరు గ్రామంలో ఉంది. వివరాల్లోకి వెళ్తే..</p>
+    <p class="ion-padding-start ion-padding-end">మంగళగిరిలోని మామిడి తోట మధ్య ఉన్న శ్రీ నాగేంద్రస్వామి పుట్టాను ఇరు మతాల భక్తులు సందర్శిస్తారు. ఆ ఆలయంలో వెలసిన నాగేంద్రుడిని ఇరు మతాల భక్తులు దర్శించుకుని స్వామి వారికి మెక్కులు చెల్లించుకుని ఆశీస్సులు పొందుతారు. ఇక్కడ నాగేంద్ర స్వామి వారి పుట్ట ఎంతో ప్రసిద్ధ చరిత్రను కలిగి ఉంది.  సుబ్రమణ్య స్వామిగా హిందువులు, నాగుల్ మీరాగా ముస్లింలు అత్యంత భక్తిశ్రద్దలతో కొలుస్తారు.</p>
+    <p class="ion-padding-start ion-padding-end"><b>సుబ్రహ్మణ్యస్వామి వారి విగ్రహం</b> పుట్ట ప్రక్కనే అందమైన రూపంలో సుబ్రహ్మణ్యస్వామి వారి విగ్రహం ఉంటుంది. ప్రతి ఆదివారం భారీ సంఖ్యలో భక్తులు స్వామివారిని దర్శించుకుంటారు. ఇక్కడ పుట్టలో నాగేంద్రుడు అత్యంత మహిమ గలవాడని భక్తుల నమ్మకం. ఆలయంలో అభిషేకం, పూజలతో పాటు అన్న ప్రాసన, చెవులు కుట్టడం, పిల్లలకు పుట్టి వెంట్రుకలను ఇవ్వడం వంటి కార్యక్రమాలను కూడా నిర్వహిస్తారు. పొంగల్ల నైవేద్యం సమర్పించి స్వామిని పూజిస్తే.. కోరిన కోర్కెలు తీరతాయని భక్తుల నమ్మకం.</p>
+    <p class="ion-padding-start ion-padding-end"><b>శ్రీ నాగేంద్ర స్వామిని దర్శించుకుంటే సంతానం కలుగుతుందని నమ్మకం.</b>ఇక్కడ వెలసిన స్వామి ఆదిశేషుడిగా భక్తుల విశ్వాసం. ఈ ఆలయానికి  కార్తీక మాసం, నాగుల చవితికి భక్తులు అధిక సంఖ్యలో తరలి వస్తారు. స్వామివారికి ప్రత్యేక నైవేద్యాలు సమర్పించి పూజిస్తారు. ఇలా చేయడం వలన రోగాలు తగ్గుతాయని నమ్ముతారు. నాగుల చవితి రోజున స్వామివారిని దర్శించుకుని పూజలు చేయడం కోసం స్థానికులతో పాటు, చుట్టు పక్కలవారు భారీ సంఖ్యలో వస్తారు. సంతానం లేని వారు పుట్టలో పాలు పోసి.. ప్రత్యేక పూజలు చేసి నాగుల చీరను కట్టుకుంటే.. స్వామివారిని భక్తితో సంతానం కొరుకుంటే సంతానం కలుగుతుందని భక్తుల విశ్వాసం. 2008లో కల్యాణ మండపాన్ని నిర్మించారు. శ్రీ నాగేంద్ర స్వామి సన్నిధిలో అత్యధికంగా పెళ్లిళ్లు జరుగుతాయి.</p>
   </div>
 </ion-content>
