--- a/src/app/pages/about/about.scss
+++ b/src/app/pages/about/about.scss
@@ -18,7 +18,7 @@ ion-toolbar ion-menu-button {
   position: relative;
 
   width: 100%;
-  height: 30%;
+  height: 40%;
 }
 
 .about-header .about-image {
@@ -33,7 +33,7 @@ ion-toolbar ion-menu-button {
   background-position: center;
   background-size: cover;
 
-  opacity: 0;
+  opacity: 1;
 }
 
 .about-header .madison {
@@ -54,7 +54,7 @@ ion-toolbar ion-menu-button {
 
 .about-info {
   position: relative;
-
+  text-align: justify;
   margin-top: -10px;
 
   border-radius: 10px;
