--- a/src/app/pages/tabs-page/tabs-page.html
+++ b/src/app/pages/tabs-page/tabs-page.html
@@ -1,10 +1,16 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
+    <ion-tab-button tab="doctors">
+      <ion-icon name="people"></ion-icon>
+      <ion-label>Doctors</ion-label>
+    </ion-tab-button>
+
     <ion-tab-button tab="schedule">
       <ion-icon name="calendar"></ion-icon>
       <ion-label>Schedule</ion-label>
     </ion-tab-button>
+
 
     <ion-tab-button tab="speakers">
       <ion-icon name="people"></ion-icon>
