--- a/src/global.scss
+++ b/src/global.scss
@@ -24,7 +24,6 @@
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
 
-
 /*
  * App CSS
  * ----------------------------------------------------------------------------
@@ -33,7 +32,6 @@
  */
 
 @import "./app/app";
-
 
 /**
  * Ionic Dark Mode
@@ -45,3 +43,94 @@
 // @import "@ionic/angular/css/palettes/dark.always.css";
 // @import "@ionic/angular/css/palettes/dark.system.css";
 @import "@ionic/angular/css/palettes/dark.class.css";
+
+.m-0 {
+  margin: 0;
+}
+.m-1 {
+  margin: 0.4rem;
+}
+.m-2 {
+  margin: 0.8rem;
+}
+.m-3 {
+  margin: 1.2rem;
+}
+.m-4 {
+  margin: 1.6rem;
+}
+.m-5 {
+  margin: 2rem;
+}
+.ml-0 {
+  margin-left: 0;
+}
+.ml-1 {
+  margin-left: 0.4rem;
+}
+.ml-2 {
+  margin-left: 0.8rem;
+}
+.ml-3 {
+  margin-left: 1.2rem;
+}
+.ml-4 {
+  margin-left: 1.6rem;
+}
+.ml-5 {
+  margin-left: 2rem;
+}
+.mr-0 {
+  margin-right: 0;
+}
+.mr-1 {
+  margin-right: 0.4rem;
+}
+.mr-2 {
+  margin-right: 0.8rem;
+}
+.mr-3 {
+  margin-right: 1.2rem;
+}
+.mr-4 {
+  margin-right: 1.6rem;
+}
+.mr-5 {
+  margin-right: 2rem;
+}
+.mt-0 {
+  margin-top: 0;
+}
+.mt-1 {
+  margin-top: 0.4rem;
+}
+.mt-2 {
+  margin-top: 0.8rem;
+}
+.mt-3 {
+  margin-top: 1.2rem;
+}
+.mt-4 {
+  margin-top: 1.6rem;
+}
+.mt-5 {
+  margin-top: 2rem;
+}
+.mb-0 {
+  margin-bottom: 0;
+}
+.mb-1 {
+  margin-bottom: 0.4rem;
+}
+.mb-2 {
+  margin-bottom: 0.8rem;
+}
+.mb-3 {
+  margin-bottom: 1.2rem;
+}
+.mb-4 {
+  margin-bottom: 1.6rem;
+}
+.mb-5 {
+  margin-bottom: 2rem;
+}
