--- a/src/app/pages/doctors-list/doctors-list.html
+++ b/src/app/pages/doctors-list/doctors-list.html
@@ -3,47 +3,61 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Doctors</ion-title>
+    <ion-title>{{ pageTitle }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content fullscreen="true">
+<ion-content [fullscreen]="isFullscreen">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Doctors</ion-title>
+      <ion-title size="large">{{ pageTitle }}</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <ion-list>
-    @for (item of doctors; track $index) {
-    <ion-item-sliding #itemOptions>
-      <ion-item-options side="start">
-        <ion-item-option (click)="editDoctor(item,itemOptions)" expandable> Edit<ion-icon style="font-size: 1.5rem" slot="start" name="link" ></ion-icon> </ion-item-option>
-      </ion-item-options>
+    <ng-container *ngFor="let doctor of doctors$ | async">
+      <ion-item-sliding #itemOptions [attr.track]="doctor.specialize | lowercase">
+        <ion-item-options side="start">
+          <ion-item-option (click)="editDoctor(doctor, itemOptions)" expandable>
+            {{ editButtonText }}
+            <ion-icon
+              [style.fontSize.px]="iconSize"
+              slot="start"
+              name="link"
+            ></ion-icon>
+          </ion-item-option>
+        </ion-item-options>
 
-      <ion-item>
-        <ion-label>
-          <h2>{{item.name}}</h2>
-          <ion-chip color="danger">
-            @if (item.gender === 'Male') {
-            <ion-icon name="man-outline"></ion-icon>
-            }@else {
-            <ion-icon name="woman-outline"></ion-icon>
-            }
-            <ion-label>{{item.gender}}</ion-label>
-          </ion-chip>
-          <ion-chip color="primary">
-            <ion-icon [name]="item.icon"></ion-icon>
-            <ion-label>{{item.specialize}}</ion-label>
-          </ion-chip>
-        </ion-label>
-      </ion-item>
+        <ion-item>
+          <ion-label class="main-label">
+            <h2>{{ doctorNameLabel }}: {{ doctor.name }}</h2>
+            <p>
+              {{ doctorGenderLabel }}:
+              <ion-icon *ngIf="doctor.gender === genderMale" name="man"></ion-icon>
+              <ion-icon *ngIf="doctor.gender === genderFemale" name="woman"></ion-icon>
+              {{ doctor.gender }}
+            </p>
+            <p>{{ doctorSpecializationLabel }}: {{ doctor.specialize }}</p>
+          </ion-label>
+        </ion-item>
 
-      <ion-item-options side="end">
-        <ion-item-option color="danger" (ionSwipe)="deleteDoctor(item, itemOptions)" expandable (click)="deleteDoctor(item, itemOptions)" > Delete <ion-icon style="font-size: 1.5rem" slot="end" name="trash" ></ion-icon> </ion-item-option>
-      </ion-item-options>
-    </ion-item-sliding>
-    }
+        <ion-item-options side="end">
+          <ion-item-option
+            color="danger"
+            (ionSwipe)="deleteDoctor(doctor, itemOptions)"
+            expandable
+            (click)="deleteDoctor(doctor, itemOptions)"
+          >
+            {{ deleteButtonText }}
+            <ion-icon
+              [style.fontSize.px]="iconSize"
+              slot="end"
+              name="trash"
+            ></ion-icon>
+          </ion-item-option>
+        </ion-item-options>
+      </ion-item-sliding>
+    </ng-container>
   </ion-list>
 
   <ion-fab slot="fixed" vertical="bottom" horizontal="end">
@@ -52,33 +66,57 @@
     </ion-fab-button>
   </ion-fab>
 
-  <!-- prettier-ignore -->
-  <ion-modal [isOpen]="isModalOpen" (didDismiss)="isModalOpen = false;" [initialBreakpoint]="0.75" [keepContentsMounted]="true" [breakpoints]="[0, 0.25, 0.5, 0.75]" >
+  <ion-modal
+    [isOpen]="isModalOpen"
+    (didDismiss)="isModalOpen = false;"
+    [initialBreakpoint]="modalInitialBreakpoint"
+    [keepContentsMounted]="true"
+    [breakpoints]="modalBreakpoints">
     <ng-template>
       <ion-header>
         <ion-toolbar>
-          <ion-title>Add New Doctor</ion-title>
+          <ion-title>{{ modalTitle }}</ion-title>
           <ion-buttons slot="end">
-            <ion-button (click)="setOpen(false)">Close</ion-button>
+            <ion-button (click)="setOpen(false)">{{ closeButtonText }}</ion-button>
           </ion-buttons>
         </ion-toolbar>
       </ion-header>
       <ion-content class="ion-padding">
         <form #doctorForm="ngForm">
-          <input type="hidden" name="id" [ngModel]="defaultFormValue.id"/>
-          <ion-input class="mb-2" required label="Doctor Name" name="name" [ngModel]="defaultFormValue.name" label-placement="floating" fill="outline" placeholder="Doctor Name"/>
-          <ion-select class="mb-2" required label="Doctor Gender" label-placement="floating" fill="outline" name="gender" [ngModel]="defaultFormValue.gender" >
-            <ion-select-option value="Female">Female</ion-select-option>
-            <ion-select-option value="Male">Male</ion-select-option>
+          <input type="hidden" name="id" [ngModel]="defaultFormValue.id" />
+          <ion-input
+            class="mb-2"
+            required
+            [label]="doctorNameLabel"
+            name="name"
+            [ngModel]="defaultFormValue.name"
+            label-placement="floating"
+            fill="outline"
+            [placeholder]="doctorNamePlaceholder"
+          ></ion-input>
+          <ion-select
+            class="mb-2"
+            required
+            [label]="doctorGenderLabel"
+            label-placement="floating"
+            fill="outline"
+            name="gender"
+            [ngModel]="defaultFormValue.gender"
+          >
+            <ion-select-option [value]="genderFemale">{{ genderFemale }}</ion-select-option>
+            <ion-select-option [value]="genderMale">{{ genderMale }}</ion-select-option>
           </ion-select>
-          <ion-select class="mb-2" required label="Doctors Specialize in" name="specialize" [ngModel]="defaultFormValue.specialize" label-placement="floating" fill="outline" >
-            <ion-select-option value="Gynecologist" >Gynecologist</ion-select-option >
-            <ion-select-option value="Cardiologist" >Cardiologist</ion-select-option >
-            <ion-select-option value="Nephrologist" >Nephrologist</ion-select-option >
-            <ion-select-option value="Ophthalmologist" >Ophthalmologist</ion-select-option >
-            <ion-select-option value="Dentist">Dentist</ion-select-option>
+          <ion-select
+            class="mb-2"
+            required
+            [label]="doctorSpecializationLabel"
+            name="specialize"
+            [ngModel]="defaultFormValue.specialize"
+            label-placement="floating"
+            fill="outline"
+          >
+            <ion-select-option *ngFor="let specialization of specializations" [value]="specialization">{{ specialization }}</ion-select-option>
           </ion-select>
-          <ion-input class="mb-2" required label="Doctor Icon" name="icon" [ngModel]="defaultFormValue.icon" label-placement="floating" fill="outline" placeholder="Doctor Icon" ></ion-input>
           <ion-button
             fill="solid"
             [disabled]="doctorForm.invalid"
@@ -86,7 +124,7 @@
             class="mt-3"
             expand="full"
           >
-            Save
+            {{ saveButtonText }}
           </ion-button>
         </form>
       </ion-content>
