--- a/src/app/pages/doctors-list/doctors-list.scss
+++ b/src/app/pages/doctors-list/doctors-list.scss
@@ -47,3 +47,34 @@ ion-col:not(:last-of-type) .doctor-card {
 
   border-top: 1px solid var(--ion-color-step-150, #d7d8da);
 }
+
+
+ion-fab-button {
+  --background: var(--ion-color-step-150, #ffffff);
+  --background-hover: var(--ion-color-step-200, #f2f2f2);
+  --background-focused: var(--ion-color-step-250, #d9d9d9);
+  --color: var(--ion-color-primary, #3880ff);
+}
+
+/*
+ * Material Design uses the ripple for activated
+ * so only style the iOS activated background
+ */
+.ios ion-fab-button {
+  --background-activated: var(--ion-color-step-250, #d9d9d9);
+}
+
+$categories: (
+  gynecologist: var(--ion-color-primary),
+  cardiologist: #ac282b,
+  nephrologist: #8e8d93,
+  ophthalmologist: #fe4c52,
+  dentist: #fd8b2d
+);
+
+@each $track, $value in map-remove($categories) {
+  ion-item-sliding[track='#{$track}'] ion-label.main-label {
+    padding-left: 10px;
+    border-left: 2px solid $value;
+  }
+}
