--- a/src/app/pages/tabs-page/tabs-page.html
+++ b/src/app/pages/tabs-page/tabs-page.html
@@ -6,6 +6,11 @@
       <ion-label>Doctors</ion-label>
     </ion-tab-button>
 
+    <ion-tab-button tab="patents">
+      <ion-icon name="people"></ion-icon>
+      <ion-label>Patents</ion-label>
+    </ion-tab-button>
+
     <ion-tab-button tab="schedule">
       <ion-icon name="calendar"></ion-icon>
       <ion-label>Schedule</ion-label>
