--- a/src/app/pages/doctors-list/page.html
+++ b/src/app/pages/doctors-list/page.html
@@ -3,57 +3,39 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>{{ pageTitle }}</ion-title>
+    <ion-title>{{ pageConfig.pageTitle }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="isFullscreen">
+<ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">{{ pageTitle }}</ion-title>
+      <ion-title size="large">{{ pageConfig.pageTitle }}</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <ion-list>
-    <ng-container *ngFor="let doctor of doctors$ | async">
-      <ion-item-sliding #itemOptions [attr.track]="doctor.specialize | lowercase">
+    <ng-container *ngFor="let item of items$ | async">
+      <ion-item-sliding #itemOptions [attr.track]="item.specialize | lowercase">
         <ion-item-options side="start">
-          <ion-item-option (click)="editDoctor(doctor, itemOptions)" expandable>
-            {{ editButtonText }}
-            <ion-icon
-              [style.fontSize.px]="iconSize"
-              slot="start"
-              name="link"
-            ></ion-icon>
+          <ion-item-option (click)="editItem(item, itemOptions)" expandable>
+            Edit
+            <ion-icon [style.fontSize.px]="24" slot="start" name="link" ></ion-icon>
           </ion-item-option>
         </ion-item-options>
 
         <ion-item>
           <ion-label class="main-label">
-            <h2>{{ doctorNameLabel }}: {{ doctor.name }}</h2>
-            <p>
-              {{ doctorGenderLabel }}:
-              <ion-icon *ngIf="doctor.gender === genderMale" name="man"></ion-icon>
-              <ion-icon *ngIf="doctor.gender === genderFemale" name="woman"></ion-icon>
-              {{ doctor.gender }}
-            </p>
-            <p>{{ doctorSpecializationLabel }}: {{ doctor.specialize }}</p>
+            <h2>Doctor Name: {{ item.name }}</h2>
+            <p> Doctor Gender: <ion-icon *ngIf="item.gender === genderMale" name="man"></ion-icon> <ion-icon *ngIf="item.gender === genderFemale" name="woman"></ion-icon> {{ item.gender }} </p>
+            <p>Doctor Specialization: {{ item.specialize }}</p>
           </ion-label>
         </ion-item>
 
         <ion-item-options side="end">
-          <ion-item-option
-            color="danger"
-            (ionSwipe)="deleteDoctor(doctor, itemOptions)"
-            expandable
-            (click)="deleteDoctor(doctor, itemOptions)"
-          >
-            {{ deleteButtonText }}
-            <ion-icon
-              [style.fontSize.px]="iconSize"
-              slot="end"
-              name="trash"
-            ></ion-icon>
+          <ion-item-option color="danger" (ionSwipe)="deleteItem(item, itemOptions)" expandable (click)="deleteItem(item, itemOptions)" >
+            Delete
+            <ion-icon [style.fontSize.px]="24" slot="end" name="trash" ></ion-icon>
           </ion-item-option>
         </ion-item-options>
       </ion-item-sliding>
@@ -66,66 +48,40 @@
     </ion-fab-button>
   </ion-fab>
 
-  <ion-modal
-    [isOpen]="isModalOpen"
-    (didDismiss)="isModalOpen = false;"
-    [initialBreakpoint]="modalInitialBreakpoint"
-    [keepContentsMounted]="true"
-    [breakpoints]="modalBreakpoints">
+  <ion-modal [isOpen]="isModalOpen" (didDismiss)="isModalOpen = false;" [initialBreakpoint]="0.75" [keepContentsMounted]="true" [breakpoints]="[0, 0.25, 0.5, 0.75]">
     <ng-template>
       <ion-header>
         <ion-toolbar>
-          <ion-title>{{ modalTitle }}</ion-title>
+          <ion-title>{{pageConfig.formAddTitle}}</ion-title>
           <ion-buttons slot="end">
-            <ion-button (click)="setOpen(false)">{{ closeButtonText }}</ion-button>
+            <ion-button (click)="setOpen(false)">Close</ion-button>
           </ion-buttons>
         </ion-toolbar>
       </ion-header>
       <ion-content class="ion-padding">
-        <form #doctorForm="ngForm">
-          <input type="hidden" name="id" [ngModel]="defaultFormValue.id" />
-          <ion-input
-            class="mb-2"
-            required
-            [label]="doctorNameLabel"
-            name="name"
-            [ngModel]="defaultFormValue.name"
-            label-placement="floating"
-            fill="outline"
-            [placeholder]="doctorNamePlaceholder"
-          ></ion-input>
-          <ion-select
-            class="mb-2"
-            required
-            [label]="doctorGenderLabel"
-            label-placement="floating"
-            fill="outline"
-            name="gender"
-            [ngModel]="defaultFormValue.gender"
-          >
-            <ion-select-option [value]="genderFemale">{{ genderFemale }}</ion-select-option>
-            <ion-select-option [value]="genderMale">{{ genderMale }}</ion-select-option>
-          </ion-select>
-          <ion-select
-            class="mb-2"
-            required
-            [label]="doctorSpecializationLabel"
-            name="specialize"
-            [ngModel]="defaultFormValue.specialize"
-            label-placement="floating"
-            fill="outline"
-          >
-            <ion-select-option *ngFor="let specialization of specializations" [value]="specialization">{{ specialization }}</ion-select-option>
-          </ion-select>
-          <ion-button
-            fill="solid"
-            [disabled]="doctorForm.invalid"
-            (click)="addDoctor(doctorForm)"
-            class="mt-3"
-            expand="full"
-          >
-            {{ saveButtonText }}
-          </ion-button>
+        <form #dynamicForm="ngForm">
+          <ng-container *ngFor="let control of pageConfig.formControls">
+            <ng-container *ngIf="control.type === 'number'">
+              <ion-input type="number" class="mb-2" [maxlength]="control.max" [minlength]="control.min" [required]="control.required" [label]="control.label" [name]="control.name" [ngModel]="pageConfig.formDefaultValues[control.name]" label-placement="floating" fill="outline" [placeholder]="itemNamePlaceholder" ></ion-input>
+            </ng-container>
+            <ng-container *ngIf="control.type === 'text'">
+              <ion-input class="mb-2" [maxlength]="control.max" [minlength]="control.min" [required]="control.required" [label]="control.label" [name]="control.name" [ngModel]="pageConfig.formDefaultValues[control.name]" label-placement="floating" fill="outline" [placeholder]="itemNamePlaceholder" ></ion-input>
+            </ng-container>
+            <ng-container *ngIf="control.type === 'select'">
+              <ion-select class="mb-2"  [required]="control.required" [label]="control.label" [name]="control.name" [ngModel]="pageConfig.formDefaultValues[control.name]" label-placement="floating" fill="outline">
+                <ion-select-option *ngFor="let option of control.options" [value]="option.id">{{ option.name }}</ion-select-option>
+              </ion-select>
+            </ng-container>
+            <ng-container *ngIf="control.type === 'multiSelect'">
+              <ion-select class="mb-2"  [required]="control.required" [multiple]="true" [label]="control.label" [name]="control.name" [ngModel]="pageConfig.formDefaultValues[control.name]" label-placement="floating" fill="outline">
+                <ion-select-option *ngFor="let option of control.options" [value]="option.id">{{ option.name }}</ion-select-option>
+              </ion-select>
+            </ng-container>
+            <ng-container *ngIf="control.type === 'hidden'">
+              <input type="hidden" [name]="control.name" [ngModel]="pageConfig.formDefaultValues[control.name]" />
+            </ng-container>
+          </ng-container>
+          <ion-button fill="solid" [disabled]="dynamicForm.invalid" (click)="addItem(dynamicForm)" class="mt-3" expand="full" >Save</ion-button>
         </form>
       </ion-content>
     </ng-template>
